[package]
name = "ticker_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
chrono = "0.4.33"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.11.24"
serde = "1.0.196"
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
